# harmonia

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bors.toml  build.rs  default.nix  flake.nix  module.nix  settings.toml  shell.nix  test.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
harmonia/: Cargo.toml
harmonia/src/: buildlog.rs  cacheinfo.rs  config.rs  health.rs  main.rs  nar.rs  narinfo.rs  narlist.rs  root.rs  serve.rs  version.rs
lib/: nix.cpp  nix.h
libnixstore/: Cargo.toml  README.md  build.rs
libnixstore/include/: nix.h
libnixstore/src/: error.rs  lib.rs  nix.cpp
src/: main.rs  nixstore.rs
test/: main.c
tests/: cache.pk  cache.sk  default.nix  t00-simple.nix  t01-signing.nix  t02-varnish.nix  t03-ca.nix
