[package]
name = "bc"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/conni2461/bc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7"
actix-web = "4.0"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
config = "0.12"
derive_more = "0.99"
http-range = "0.1"
mime = "0.3"
base64 = "0.13"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
