[package]
name = "harmonia"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/helsinki-systems/harmonia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "*"
mime = "0.3"
base64 = "0.13"
tempfile = "3.3"
actix-files = "0.6"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
