[package]
name = "harmonia"
version = "0.4.0"
authors = ["Simon Hauser <simon.hauser@helsinki-systems.de>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/helsinki-systems/harmonia"
repository = "https://github.com/helsinki-systems/harmonia.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "compress-zstd", "cookies"] }
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.*", default-features = false, features = ["toml"] }
mime = "0.3"
base64 = "0.13"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1" }
http-range = "0.1"

libnixstore = { path = "../libnixstore" }
