[package]
name = "harmonia"
version = "0.5.0"
authors = ["Simon Hauser <simon.hauser@helsinki-systems.de>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/helsinki-systems/harmonia"
repository = "https://github.com/helsinki-systems/harmonia.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "compress-zstd", "cookies"] }
actix-files = "0.6.2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
mime = "0.3"
base64 = "0.21"
tokio = { version = "1", features = ["sync", "fs", "rt", "macros"] }
tokio-stream = { version = "0.1" }
http-range = "0.1"
askama_escape = "0.10.3"
percent-encoding = "2.2.0"
anyhow = "1.0.70"
tempfile = "3.4.0"


libnixstore = { path = "../libnixstore" }
