[package]
name = "libnixstore"
version = "0.3.0"
authors = ["Simon Hauser <simon.hauser@helsinki-systems.de>"]
description = "Rust friendly bindings to nixos nix-store library"
edition = "2021"
homepage = "https://github.com/helsinki-systems/harmonia"
repository = "https://github.com/helsinki-systems/harmonia.git"
license = "MIT"

[dependencies]
cxx = "1"

[build-dependencies]
cxx-build = "1"
pkg-config = "0.3"

[lib]
doctest = false
