[package]
name = "libnixstore"
version = "0.4.0"
authors = ["Simon Hauser <simon.hauser@helsinki-systems.de>"]
description = "Rust friendly bindings to nixos nix-store library"
edition = "2021"
homepage = "https://github.com/helsinki-systems/harmonia"
repository = "https://github.com/helsinki-systems/harmonia.git"
license = "MIT"

[dependencies]
cxx = "1"
tokio = { version = "1", features = ["fs","io-util","process","sync","rt"] }
futures = "0.3.25"

[build-dependencies]
cxx-build = "1"
pkg-config = "0.3"

[lib]
doctest = false
